# beezer

./: .gitignore  CODING_STYLE.md  LICENSE.md  License.rst  README.md  ReadMe.md  coding_style.md
.github/workflows/: build.yaml
Docs/: History.md  History.txt  New_Archive_Format.md  ReleaseInstructions.md  Structured_List.md  Todo.md
Docs/UserGuide/: AddingFiles.rst  AddonsWorkers.rst  ArchiveInfo.rst  ArchiveWindow.rst  CMakeLists.txt  Contact.rst  Conventions.rst  CreatingArchives.rst  CreatingFolders.rst  Credits.rst  DeletingArchives.rst  DeletingFiles.rst  EditingComments.rst  ExtractingFiles.rst  Features.rst  FileTypeRules.rst  Installation.rst  Introduction.rst  KnownBugs.rst  License.rst  Preferences.rst  Requirements.rst  SearchingArchives.rst  TestingArchives.rst  VersionHistory.rst  ViewingFiles.rst  WelcomeWindow.rst  conf.py  custom.css  index.rst
Docs/UserGuide/addons/: 7Zip.rst  Arj.rst  Bzip2.rst  Gzip.rst  Hpkg.rst  Lha.rst  Rar.rst  SquashFS.rst  Xz.rst  Zip.rst  Zstd.rst
Docs/UserGuide/tools/: FileJoiner.rst  FileSplitter.rst  QuickCreate.rst
Icons/: Beezer  Startup_Open_Recent3
Installer/: Read_Before_Release.txt
Source/: CMakeLists.txt
Source/AppUtils/: AppUtils.cpp  AppUtils.h
Source/ArchiveEntry/: ArchiveEntry.cpp  ArchiveEntry.h
Source/Archiver/: Archiver.cpp  Archiver.h  ArchiverMenuItem.h
Source/ArjArchiver/: ArjArchiver.cpp  ArjArchiver.h  ArjArchiver.rdef  CMakeLists.txt
Source/ArjArchiver/locales/: en.catkeys
Source/BZipArchiver/: BZipArchiver.cpp  BZipArchiver.h  BZipArchiver.rdef  CMakeLists.txt
Source/BZipArchiver/locales/: en.catkeys
Source/Beezer/: AboutWindow.cpp  AboutWindow.h  AddOnWindow.cpp  AddOnWindow.h  AppConstants.h  ArchiveRep.cpp  ArchiveRep.h  ArchiverMgr.cpp  ArchiverMgr.h  ArkInfoWindow.cpp  ArkInfoWindow.h  Beezer.cpp  Beezer.h  Beezer.rdef  BeezerApp.cpp  BeezerApp.h  BeezerListView.cpp  BeezerStringView.cpp  BitmapPool.cpp  BitmapPool.h  CMakeLists.txt  CommentWindow.cpp  CommentWindow.h  CommonStrings.h  InfoBar.cpp  InfoBar.h  LocalUtils.cpp  LocalUtils.h  LogTextView.cpp  LogWindow.cpp  LogWindow.h  MainMenu.cpp  MainMenu.h  MainWindow.cpp  MainWindow.h  MsgConstants.h  Preferences.cpp  Preferences.h  PrefsFields.h  PrefsViewAdd.cpp  (+23 more)
Source/Beezer/Dialogs/: InputAlert.cpp  InputAlert.h  SelectDirPanel.cpp  SelectDirPanel.h
Source/Beezer/FSUtils/: FSUtils.cpp  FSUtils.h
Source/Beezer/FileJoiner/: FileJoinerWindow.cpp  FileJoinerWindow.h  Joiner.cpp  Joiner.h
Source/Beezer/FileJoinerStub/: CMakeLists.txt  JoinerWindow.cpp
Source/Beezer/FileSplitter/: FileSplitterWindow.cpp  FileSplitterWindow.h
Source/Beezer/PrefsWindow/: PrefsListItem.cpp  PrefsListItem.h  PrefsView.cpp  PrefsView.h  PrefsViewAdd.cpp  PrefsViewAdd.h  PrefsViewExtract.cpp  PrefsViewExtract.h  PrefsViewInterface.cpp  PrefsViewInterface.h  PrefsViewMisc.cpp  PrefsViewMisc.h  PrefsViewPaths.cpp  PrefsViewPaths.h  PrefsViewRecent.cpp  PrefsViewRecent.h  PrefsViewState.cpp  PrefsViewState.h  PrefsViewWindows.cpp  PrefsViewWindows.h  PrefsWindow.cpp  PrefsWindow.h
Source/Beezer/RegExString/: RegExString.cpp  RegExString.h  RegExp.cpp
Source/Beezer/SplitPane/: SplitPane.cpp
Source/Beezer/TrackerAddOn/: CMakeLists.txt
Source/Beezer/Widgets/: BarberPole.cpp  BarberPole.h  BeezerListView.cpp  BeezerListView.h  BeezerStringView.cpp  BeezerStringView.h  BevelView.cpp  BevelView.h  BitmapMenuItem.cpp  BitmapMenuItem.h  ImageButton.cpp  ImageButton.h  InfoBar.cpp  InfoBar.h  LogTextView.cpp  LogTextView.h  StaticBitmapView.cpp  StaticBitmapView.h  ToolBar.cpp  ToolBar.h
Source/Beezer/docs/: AddonsWorkers.html  FileTypeRules.html  Topics.html
Source/Beezer/locales/: en.catkeys
Source/CMakeModules/: UseHaiku.cmake
Source/ColumnListView/: CMakeLists.txt
Source/ColumnListView/BetterScrollView/: BetterScrollView.cpp
Source/ColumnListView/ColumnListView/: CLVColumn.cpp  CLVColumn.h  CLVColumnLabelView.cpp  CLVEasyItem.cpp  CLVEasyItem.h  ColumnListView.cpp  ColumnListView_jaf.cpp
Source/FileJoinerStub/: CMakeLists.txt  FileJoinerStub.rdef  JoinerStrings.cpp  JoinerStrings.h  JoinerStub.cpp  JoinerStub.h  JoinerWindow.cpp  JoinerWindow.h
Source/GZipArchiver/: CMakeLists.txt  GZipArchiver.cpp  GZipArchiver.h  GZipArchiver.rdef
Source/GZipArchiver/locales/: en.catkeys
Source/HPkgArchiver/: CMakeLists.txt  HPkgArchiver.cpp  HPkgArchiver.h  HPkgArchiver.rdef
Source/HashTable/: HashTable.cpp  HashTable.h
Source/LhaArchiver/: CMakeLists.txt  LhaArchiver.cpp  LhaArchiver.h  LhaArchiver.rdef
Source/LhaArchiver/locales/: en.catkeys
Source/ListEntry/: ListEntry.cpp  ListEntry.h
Source/PipeMgr/: PipeMgr.cpp  PipeMgr.h
Source/RarArchiver/: CMakeLists.txt  RarArchiver.cpp  RarArchiver.h  RarArchiver.rdef
Source/RarArchiver/locales/: en.catkeys
Source/Shared/: DirRefFilter.cpp  DirRefFilter.h  KeyedMenuItem.h  Shared.h
Source/SquashFSArchiver/: CMakeLists.txt  SquashFSArchiver.cpp  SquashFSArchiver.h  SquashFSArchiver.rdef
Source/SquashFSArchiver/locales/: en.catkeys
Source/TarArchiver/: CMakeLists.txt  TarArchiver.cpp  TarArchiver.h  TarArchiver.rdef
Source/TarArchiver/locales/: en.catkeys
Source/TrackerAddOn/: CMakeLists.txt  TrackerAddOn.cpp
Source/TrackerAddOn/locales/: en.catkeys
Source/XzArchiver/: CMakeLists.txt  XzArchiver.cpp  XzArchiver.h  XzArchiver.rdef
Source/XzArchiver/locales/: en.catkeys
Source/ZipArchiver/: CMakeLists.txt  ZipArchiver.cpp  ZipArchiver.h  ZipArchiver.rdef
Source/ZipArchiver/locales/: en.catkeys
Source/ZstdArchiver/: CMakeLists.txt  ZstdArchiver.cpp  ZstdArchiver.h  ZstdArchiver.rdef
Source/ZstdArchiver/locales/: en.catkeys
Source/z7Archiver/: CMakeLists.txt  z7Archiver.cpp  z7Archiver.h  z7Archiver.rdef
Source/z7Archiver/locales/: en.catkeys
